adding an initial template for reference

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Finance Tracker</title>
   </head>
   <body>
-    Hello World
+    SPAYLATER <br />
+    Monthly <br />
+    Loans <br />
+    Transactions
   </body>
 </html>
