--- a/index.html
+++ b/index.html
@@ -1,56 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Finance Tracker</title>
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
-  <body>
-    <h1>SPAYLATER</h1>
 
-    <div class="calculator">
-      <h2>Loan/Debt Calculator</h2>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Finance Tracker</title>
+  <link rel="stylesheet" href="./css/style.css" />
+</head>
 
-      <p>Monthly Due:</p>
+<body>
+  <h1>SPAYLATER</h1>
 
-      <div class="total-loan">
-        Total Loan: $<span id="totalLoan">0.00</span>
-      </div>
-      <div class="panel">
-        <button class="action-panel js-action-panel">Click</button>
-        <div class="content js-content" ,id="content">
-          This is the text that will be shown and hidden.
-        </div>
-        <div class="buttons js-buttons">
-          <button id="addLoan">Add Loan</button>
-          <button id="makePayment">Make Payment</button>
-        </div>
-      </div>
+  <div class="calculator">
+    <h2>Loan/Debt Calculator</h2>
 
-      <h4>Transactions</h4>
-      <table>
-        <tr>
-          <td>Date</td>
-          <td>Description</td>
-          <td>Amount</td>
-          <td>Period</td>
-        </tr>
-        <tr>
-          <td>7/20</td>
-          <td>Add Loan</td>
-          <td>500</td>
-          <td>3</td>
-        </tr>
-        <tr>
-          <td>7/15</td>
-          <td>Due Payment</td>
-          <td>200</td>
-          <td>N/A</td>
-        </tr>
-      </table>
+    <p>Monthly Due:</p>
+
+    <div class="total-loan">
+      Total Loan: $<span id="totalLoan">0.00</span>
     </div>
 
-    <script type="module" src="./scripts/actionPanel.js"></script>
-  </body>
+    <div class="center-container">
+      <button class="toggle-button js-toggle-button">Add Transactions</button>
+    </div>
+    <div class="action-panel" id="action-panel">
+
+      <label for="amount"> Amount:</label>
+      <input type="number" id="amount" placeholder="Enter amount">
+
+      <label for="selectedDate">Date:</label>
+      <input type="date" id="selected date">
+
+      <div class="buttons">
+        <button id=" addLoan">Add Loan</button>
+        <button id="makePayment">Make Payment</button>
+      </div>
+
+
+    </div>
+
+    <h4>Transactions</h4>
+    <table>
+      <tr>
+        <td>Date</td>
+        <td>Description</td>
+        <td>Amount</td>
+        <td>Period</td>
+      </tr>
+      <tr>
+        <td>7/20</td>
+        <td>Add Loan</td>
+        <td>500</td>
+        <td>3</td>
+      </tr>
+      <tr>
+        <td>7/15</td>
+        <td>Due Payment</td>
+        <td>200</td>
+        <td>N/A</td>
+      </tr>
+    </table>
+  </div>
+
+  <script type="module" src="./scripts/actionPanel.js"></script>
+</body>
+
 </html>
