--- a/index.html
+++ b/index.html
@@ -23,21 +23,18 @@
     <div class="center-container">
       <button class="toggle-button js-toggle-button">Add Transactions</button>
     </div>
-    <div class="action-panel" id="action-panel">
-
-      <label for="amount"> Amount:</label>
-      <input type="number" id="amount" placeholder="Enter amount">
+    <form class="action-panel buttons" id="js-action-panel">
+      <label for="inputAmount"> Amount:</label>
+      <input type="number" id="inputAmount" placeholder="Enter amount" required />
 
       <label for="selectedDate">Date:</label>
-      <input type="date" id="selected date">
+      <input type="date" id="selectedDate" required />
 
       <div class="buttons">
-        <button id=" addLoan">Add Loan</button>
-        <button id="makePayment">Make Payment</button>
+        <button type="submit" id="addLoan">Add Loan</button>
+        <button type="submit" id="makePayment">Make Payment</button>
       </div>
-
-
-    </div>
+    </form>
 
     <h4>Transactions</h4>
     <table>
@@ -63,6 +60,7 @@
   </div>
 
   <script type="module" src="./scripts/actionPanel.js"></script>
+  <script type="module" src="./scripts/addItem.js"></script>
 </body>
 
 </html>
