--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </form>
 
     <h4>Transactions</h4>
+    <div class="js-div-tr">shows on here</div>
     <table>
       <tr>
         <td>Date</td>
