--- a/index.html
+++ b/index.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Finance Tracker</title>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Finance Tracker</title>
-  <link rel="stylesheet" href="./css/style.css" />
-</head>
+  <body>
+    <h1>SPAYLATER</h1>
 
-<body>
-  <h1>SPAYLATER</h1>
+    <div class="calculator">
+      <h2>Loan/Debt Calculator</h2>
 
-  <div class="calculator">
-    <h2>Loan/Debt Calculator</h2>
+      <p>Monthly Due:</p>
 
-    <p>Monthly Due:</p>
-
-    <div class="total-loan">
-      Total Loan: $<span id="totalLoan">0.00</span>
-    </div>
-
-    <div class="center-container">
-      <button class="toggle-button js-toggle-button">Add Transactions</button>
-    </div>
-    <form class="action-panel buttons" id="js-action-panel">
-      <label for="inputAmount"> Amount:</label>
-      <input type="number" id="inputAmount" placeholder="Enter amount" required />
-
-      <label for="selectedDate">Date:</label>
-      <input type="date" id="selectedDate" required />
-
-      <div class="buttons">
-        <button type="submit" id="addLoan">Add Loan</button>
-        <button type="submit" id="makePayment">Make Payment</button>
+      <div class="total-loan">
+        Total Loan: $<span id="totalLoan">0.00</span>
       </div>
-    </form>
 
-    <h4>Transactions</h4>
-    <div class="container">
-      <table class="div-tr js-div-tr">
-      </table>
+      <div class="center-container">
+        <button class="toggle-button js-toggle-button">Add Transactions</button>
+      </div>
+      <form class="action-panel buttons" id="js-action-panel">
+        <label for="inputAmount"> Amount:</label>
+        <input
+          type="number"
+          id="inputAmount"
+          placeholder="Enter amount"
+          required
+        />
+
+        <label for="selectedDate">Date:</label>
+        <input type="date" id="selectedDate" required />
+
+        <div class="buttons">
+          <button type="submit" id="addLoan">Add Loan</button>
+          <button type="submit" id="makePayment">Make Payment</button>
+        </div>
+      </form>
+
+      <h4>Transactions</h4>
+      <div class="container">
+        <table class="div-tr js-div-tr"></table>
+      </div>
     </div>
-  </div>
+    <div class="clock" id="clock"></div>
 
-  <script type="module" src="./scripts/actionPanel.js"></script>
-  <script type="module" src="./scripts/addItem.js"></script>
-</body>
-
+    <script type="module" src="./scripts/actionPanel.js"></script>
+    <script type="module" src="./scripts/addItem.js"></script>
+    <script type="module" src="./utils/clock.js"></script>
+  </body>
 </html>
