responsive transaction history

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       </div>
     </form>
 
-    <h4>Transactions</h4>
-    <div class="container js-container">
+    <h2>Transactions</h2>
+    <div class="container" id="js-container">
     </div>
   </div>
   <div class="clock" id="clock"></div>
