--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="calculator">
     <h2>Loan/Debt Calculator</h2>
     <div class="main">
-      <p>Monthly Due:</p>
+      <p>Monthly Due: $<span id="monthly-due">0.00</p>
       <p>Total Loan: $<span id="totalLoan">0.00</span>
       </p>
 
