--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <br>
     <h2>Loan/Debt Calculator</h2>
     <div class="main">
-      <p>Monthly Due: $<span id="monthly-due">0.00</p>
-      <p>Total Loan: $<span id="totalLoan">0.00</span>
-      </p>
+      <p class="heavy">Total Amount Due: ₱ <span id="totalLoan">$0.00</span></p>
+      <p class="light">until XXXX of 20XX</p>
+      <br>
+      <p class="normal">Amount to pay this month</p>
+      <h1>₱ <span id="monthly-due">0.00</h1>
     </div>
 
     <div class="center-container">
